--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
+@import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Darumadrop+One&family=DotGothic16&display=swap");
+
 .App {
   text-align: center;
+  font-family: "DotGothic16", sans-serif;
+  background-image: url("../public/images/dod.png");
+  padding: 100px 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pokemonCardContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  gap: 50px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn button {
+  font-family: "Darumadrop One", cursive;
+  width: 150px;
+  padding: 10px 20px;
+  margin: 0 50px;
+  background-color: #ffd2ff;
+  border: 1px solid #ccc;
+  color: rgb(61, 61, 61);
+  font-size: 20px;
+  cursor: pointer;
+  user-select: none;
+  text-decoration: none;
+  position: relative;
+  transition: 0.3s ease-in-out;
+  vertical-align: middle;
+  border: 2px solid #ccc;
+  box-shadow: 5px 5px #ccc;
+  transition: 0.3s ease-in-out;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn button:hover {
+  box-shadow: none;
+  transform: translate(5px, 5px);
+  color: gray;
+  background-color: #f8d8f8;
 }
