--- a/src/Header.css
+++ b/src/Header.css
@@ -8,17 +8,25 @@
 
 .header h1 {
   font-size: 68px;
-  text-align: center;
   padding: 20px 0;
+  text-align: center;
+  border-bottom: 2px solid white;
+  position: relative;
 }
 
-.input {
-  justify-content: center;
-  display: flex;
-  gap: 20px;
+.header .line {
+  border: white 2px solid;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 125px;
+  left: 50%;
+  transform: translate(-50%, -0%);
 }
 
-.input input {
-  width: 200px;
-  line-height: 2;
+.header p {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 20px;
 }
